Fix some letter spacing stuff that was bothering me

--- a/css/style.css
+++ b/css/style.css
@@ -111,13 +111,12 @@ p {
 
 .p1 {
     font-size: 24px;
-    letter-spacing: -1px;
+    letter-spacing: -0.25px;
     margin-bottom: 24px;
 }
 
 .p2 {
     font-size: 18px;
-    letter-spacing: 0px;
 }
 
 a {
